--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
           <!-- Display the couple photo (8.JPG) inside the envelope using a background image
                so that it conforms to the pentagon-shaped clip path and maintains
                the correct aspect ratio. -->
-          <div class="couple-photo-placeholder" style="background-image: url('assets/8.JPG'); background-size: cover; background-position: top center;"></div>
+          <div class="couple-photo-placeholder" style="background-image: url('assets/1.jpg'); background-size: cover; background-position: top center;"></div>
         </div>
         <!-- Hearts that float up when the envelope is opened -->
         <div class="heart heart1"></div>
@@ -792,7 +792,7 @@
         <h2>Lời mời</h2>
         <!-- Replace placeholder with your own couple photo -->
         <div class="photo-holder">
-          <img src="assets/8.JPG" alt="Ảnh cặp đôi" class="invitation-photo">
+          <img src="assets/1.jpg" alt="Ảnh cặp đôi" class="invitation-photo">
         </div>
         <div class="countdown">
           <div class="countdown-item"><span id="days2" class="count-number">0</span><span class="count-label">Ngày</span></div>
@@ -845,7 +845,7 @@
         <!-- Render the "Sweet Wedding" heading in a unified script font -->
         <h2 class="sweet-title">Sweet Wedding</h2>
         <!-- Couple photo placeholder updated to use the first demo image. This displays the photo supplied as “ảnh 1”. -->
-        <img src="assets/1.JPG" alt="Ảnh cặp đôi" class="img-placeholder" style="object-fit: cover;">
+        <img src="assets/t.jpg" alt="Ảnh cặp đôi" class="img-placeholder" style="object-fit: cover;">
         <div class="paragraph" style="font-family:'Great Vibes', cursive; font-size:24px; color:#c14444;">Marry me?</div>
         <!-- Bride photo placeholder now shows a demo image (1.jpg) -->
         <img src="assets/3.JPG" alt="Ảnh cô dâu" class="img-placeholder" style="object-fit: cover;">
@@ -862,7 +862,7 @@
             TP.Bắc Ninh
           </div>
           <div style="text-align:center;">
-            <img src="assets/1.JPG" alt="Ảnh chú rể" style="width:100%; height:120px; object-fit:cover; border-radius:10px;">
+            <img src="assets/t.jpg" alt="Ảnh chú rể" style="width:100%; height:120px; object-fit:cover; border-radius:10px;">
             <strong>Nguyễn Khánh Lộc</strong><br>
             09/09/1993<br>
             TP.Bắc Ninh
@@ -911,10 +911,10 @@
       <div class="section fade-section">
         <h2>Album</h2>
         <div class="album-container" style="display:grid; grid-template-columns: repeat(2, 1fr); gap:10px; margin-top:10px;">
-          <img class="album-item fade-section" src="assets/5.JPG" alt="Ảnh 1" style="width:100%; height:200px; object-fit:cover; border-radius:10px;">
+          <img class="album-item fade-section" src="assets/d.JPG" alt="Ảnh 1" style="width:100%; height:200px; object-fit:cover; border-radius:10px;">
           <img class="album-item fade-section" src="assets/e.JPG" alt="Ảnh 2" style="width:100%; height:200px; object-fit:cover; border-radius:10px;">
-          <img class="album-item fade-section" src="assets/d3.JPG" alt="Ảnh 3" style="width:100%; height:200px; object-fit:cover; border-radius:10px;">
-          <img class="album-item fade-section" src="assets/d2.JPG" alt="Ảnh 4" style="width:100%; height:200px; object-fit:cover; border-radius:10px;">
+          <img class="album-item fade-section" src="assets/e1.JPG" alt="Ảnh 3" style="width:100%; height:200px; object-fit:cover; border-radius:10px;">
+          <img class="album-item fade-section" src="assets/e2.JPG" alt="Ảnh 4" style="width:100%; height:200px; object-fit:cover; border-radius:10px;">
         </div>
       </div>
       <!-- RSVP form -->
