--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
         <!-- Render the "Sweet Wedding" heading in a unified script font -->
         <h2 class="sweet-title">Sweet Wedding</h2>
         <!-- Couple photo placeholder updated to use the first demo image. This displays the photo supplied as “ảnh 1”. -->
-        <img src="assets/t.jpg" alt="Ảnh cặp đôi" class="img-placeholder" style="object-fit: cover;">
+        <img src="assets/t.JPG" alt="Ảnh cặp đôi" class="img-placeholder" style="object-fit: cover;">
         <div class="paragraph" style="font-family:'Great Vibes', cursive; font-size:24px; color:#c14444;">Marry me?</div>
         <!-- Bride photo placeholder now shows a demo image (1.jpg) -->
         <img src="assets/3.JPG" alt="Ảnh cô dâu" class="img-placeholder" style="object-fit: cover;">
