--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
             TP.Bắc Ninh
           </div>
           <div style="text-align:center;">
-            <img src="assets/t.jpg" alt="Ảnh chú rể" style="width:100%; height:120px; object-fit:cover; border-radius:10px;">
+            <img src="assets/t.JPG" alt="Ảnh chú rể" style="width:100%; height:120px; object-fit:cover; border-radius:10px;">
             <strong>Nguyễn Khánh Lộc</strong><br>
             09/09/1993<br>
             TP.Bắc Ninh
