--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
         </div>
         <div class="gift-card">
           <!-- Display groom's image inside the circular photo area -->
-          <img class="photo" src="assets/1.JPG" alt="Chú rể">
+          <img class="photo" src="assets/t.JPG" alt="Chú rể">
           <div class="info">
             Chú rể<br>Nguyễn Khánh Lộc<br>MB Bank: 3809091993
           </div>
